<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#B40404"
    android:orientation="vertical"
    tools:context="hevs.ch.fiesta.views.Advantage">

    <TextView
        android:id="@+id/textView_titleDrinker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/blanc"
        android:text="@string/title_drinker"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/textView_advOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:textSize="15dp"
        android:textColor="@color/blanc"
        android:text="@string/adv_One"/>
    <TextView
        android:id="@+id/textView_advTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:textSize="15dp"
        android:textColor="@color/blanc"
        android:text="@string/adv_Two"/>
    <TextView
        android:id="@+id/textView_advThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:textSize="15dp"
        android:textColor="@color/blanc"
        android:text="@string/adv_Three"/>

    <TextView
        android:id="@+id/textView_titleDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/blanc"
        android:text="@string/title_driver"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/textView_Oneadv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:textSize="15dp"
        android:textColor="@color/blanc"
        android:text="@string/One_adv"/>
    <TextView
        android:id="@+id/textView_Twoadv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:textSize="15dp"
        android:textColor="@color/blanc"
        android:text="@string/Two_adv"/>

    <Button
        android:id="@+id/advantageBackHome"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:textSize="13dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/blanc"
        android:text="@string/buttonBack"
        android:onClick="backHome"/>

</LinearLayout>
