<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hevs.ch.fiesta.AddTransport"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="#B40404">

    <TextView
        android:id="@+id/TextView_CreerTransport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create_transport"
        android:typeface="serif"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:textColor="@color/blanc"
        android:layout_marginBottom="30dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView_Destination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/destination"
            android:textColor="@color/blanc"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/EditText_destination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView_nbPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/capacity"
            android:textColor="@color/blanc"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/EditText_nbPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView_heureDepart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/departure"
            android:textColor="@color/blanc"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/EditText_heureDepart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <CheckBox
            android:id="@+id/RadioButton_AccepteRegle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp" />

        <TextView
            android:id="@+id/TextView_Reglement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reglement"
            android:textColor="@color/blanc"
            android:textSize="18dp"/>
    </LinearLayout>


    <Button
        android:id="@+id/button_creerTransport"
        android:layout_marginTop="25dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/createRoute"
        android:background="@color/colorPrimary"
        android:textColor="@color/blanc"
        android:textStyle="bold"/>


</LinearLayout>
