<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InscriptionActivity"
    android:orientation="vertical"
    android:background="#B40404">

    <TextView
        android:id="@+id/TextView_TitreInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:typeface="serif"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:textColor="@color/blanc"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView_Username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/username"
            android:textColor="@color/blanc"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/EditText_Username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"/>

    </LinearLayout>

    <TextView
        android:id="@+id/TextView_regleDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:text="@string/regle_driver"
        android:textColor="@color/blanc"
        android:textSize="15dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>


    <Button
        android:id="@+id/button_driver"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@mipmap/volant"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/TextView_regleDrinker"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regle_drinker"
        android:textColor="@color/blanc"
        android:textSize="15dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/button_drinker"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@mipmap/cocktail"
        android:layout_gravity="center"/>

</LinearLayout>
