<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B40404"
    android:orientation="vertical"
    tools:context=".views.ChooseEventAct">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ImageView_pictureCoVoit"
            android:src="@mipmap/covoiturage"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="8dp"/>

        <Button
            android:id="@+id/button_apropos"
            android:layout_marginTop="35dp"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/about"
            android:textSize="13dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/blanc"
            android:layout_marginRight="12dp"/>

        <Button
            android:id="@+id/button_avantages"
            android:layout_marginTop="35dp"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/advantage"
            android:textSize="13dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/blanc" />

    </LinearLayout>

    <TextView
        android:id="@+id/home_title"
        android:text="@string/list_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:textColor="@color/blanc"/>

    <Button
        android:id="@+id/button_chat"
        android:layout_marginTop="35dp"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="chat"
        android:textSize="13dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/blanc" />

    <ListView
        android:id="@+id/choose_event_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/blanc"/>
</LinearLayout>
